chore(keycloak): make Keycloak URL env-based and configure Traefik routing
- Make Keycloak URL configurable via KEYCLOAK_URL with localhost fallback.
- Add KEYCLOAK_URL to 'users' container environment.
- Add Traefik labels to 'keycloak' container for routing.

--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - RABBITMQ_HOST=rabbitmq
       - MONGO_HOST=mongo-users
       - USERS_SERVICE_SECRET=${USERS_SERVICE_SECRET}
+      - KEYCLOAK_URL="http://auth.${HOST}"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
