chore(fix-check-style): resolve conflict between scalafix end scalafmt

--- a/services/events/.scalafix.conf
+++ b/services/events/.scalafix.conf
@@ -6,6 +6,14 @@ rules = [
   ExplicitResultTypes
 ]
 
+OrganizeImports {
+  groupedImports = Merge
+  importSelectorsOrder = SymbolsFirst
+  importsOrder = SymbolsFirst
+  removeUnused = true
+  targetDialect = Scala3
+}
+
 ExplicitResultTypes {
   memberKind = [Def, Val, Var]
   memberVisibility = [Public, Protected]
