chore(docker): create docker environment for interactions service

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,5 @@ EVENTS_SERVICE_PORT=9010
 MONGO_EXPRESS_EVENTS_PORT=9011
 MEDIA_SERVICE_PORT=9020
 MINIO_PASSWORD=
+INTERACTIONS_SERVICE_PORT=9030
+MONGO_EXPRESS_INTERACTIONS_PORT=9031
