chore(i18n): enable i18n on push in feature/frontend-service

--- a/.github/workflows/auto-i18n.yml
+++ b/.github/workflows/auto-i18n.yml
@@ -2,9 +2,9 @@ name: Auto Translate i18n
 
 on:
   workflow_dispatch:
-#   push:
-#     branches:
-#       - feature/frontend-service
+  push:
+    branches:
+      - feature/frontend-service
 
 permissions:
   contents: write
@@ -19,3 +19,4 @@ jobs:
           source: 'en'
           targets: 'it,fr,de,es'
           input_file: 'services/frontend/src/i18n/locales/en.ts'
+          evaluate_changes: 'false'
