--- a/.github/workflows/auto-i18n.yml
+++ b/.github/workflows/auto-i18n.yml
@@ -9,6 +9,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: auto-translate-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   translate:
     runs-on: ubuntu-latest
@@ -19,4 +23,3 @@ jobs:
           source: 'en'
           targets: 'it,fr,de,es'
           input_file: 'services/frontend/src/i18n/locales/en.ts'
-          evaluate_changes: 'false'
