fix(ci): run ci

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -4,17 +4,17 @@ WORKDIR /home/app
 COPY ./services/frontend/package.json ./
 RUN npm install
 COPY ./services/frontend .
+
 ENV NODE_ENV=production
-ARG VITE_HOST
-ENV VITE_HOST=${VITE_HOST}
+ENV VITE_HOST="localhost"
 ENV VITE_USE_MOCK_API=true
+
 RUN npm run build
 RUN npm prune --omit=dev
 
 FROM node:25-alpine3.22
 WORKDIR /home/app
-ARG PORT
-ENV PORT=${PORT}
+ENV PORT=3000
 COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
 RUN npm install -g serve@14.2.5
