chore(secret): load USERS_SERVICE_SECRET from env with default fallback and configure it in keycloak-provision for test client creation

--- a/infrastructure/authentication/docker-compose-dev.yaml
+++ b/infrastructure/authentication/docker-compose-dev.yaml
@@ -7,4 +7,6 @@ services:
     keycloak-provision:
       build:
         context: .
-        dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision    
+        dockerfile: ./infrastructure/authentication/Dockerfile-keycloak-provision
+      environment:
+        USERS_SERVICE_SECRET: "supersecret"
