--- a/docs/openAPI/openapi/events.yaml
+++ b/docs/openAPI/openapi/events.yaml
@@ -104,92 +104,113 @@ paths:
           description: Events service (production)
       responses:
         '200':
-          description: A JSON array of events (can be empty if no events exist)
+          description: Successfully retrieved all events
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id_event:
-                      type: string
-                      description: Event ID
-                    title:
-                      type: string
-                      description: Event title
-                    description:
-                      type: string
-                      description: Event description
-                    poster:
-                      type: string
-                      description: Event poster URL
-                    tags:
-                      type: array
-                      items:
-                        type: string
-                      description: List of event tags
-                    location:
+                type: object
+                properties:
+                  events:
+                    type: array
+                    items:
                       type: object
-                      description: Event location object
                       properties:
-                        name:
+                        id_event:
                           type: string
-                          description: Location or venue name. May be empty string ("") if unknown.
-                        country:
+                          description: Event ID
+                        title:
                           type: string
-                        country_code:
+                          description: Event title
+                        description:
                           type: string
-                        state:
+                          description: Event description
+                        poster:
                           type: string
-                          description: May be empty string ("") if not provided.
-                        province:
+                          description: Event poster URL
+                        tags:
+                          type: array
+                          items:
+                            type: string
+                          description: List of event tags
+                        location:
+                          type: object
+                          description: Event location object
+                          properties:
+                            name:
+                              type: string
+                              description: Location or venue name. May be empty string ("") if unknown.
+                            country:
+                              type: string
+                            country_code:
+                              type: string
+                            state:
+                              type: string
+                              description: May be empty string ("") if not provided.
+                            province:
+                              type: string
+                              description: May be empty string ("") if not provided.
+                            city:
+                              type: string
+                              description: May be empty string ("") if not provided.
+                            road:
+                              type: string
+                            postcode:
+                              type: string
+                            house_number:
+                              type: string
+                              description: May be empty string ("") if not provided.
+                            lat:
+                              type: number
+                              description: Latitude in decimal degrees
+                            lon:
+                              type: number
+                              description: Longitude in decimal degrees
+                            link:
+                              type: string
+                              description: Optional URL or reference; may be empty string ("") if not provided.
+                        date:
                           type: string
-                          description: May be empty string ("") if not provided.
-                        city:
-                          type: string
-                          description: May be empty string ("") if not provided.
-                        road:
-                          type: string
-                        postcode:
-                          type: string
-                        house_number:
-                          type: string
-                          description: May be empty string ("") if not provided.
-                        lat:
+                          format: date-time
+                          description: Event date and time
+                        price:
                           type: number
-                          description: Latitude in decimal degrees
-                        lon:
-                          type: number
-                          description: Longitude in decimal degrees
-                        link:
+                          format: double
+                          description: Event ticket price  
+                        status:
                           type: string
-                          description: Optional URL or reference; may be empty string ("") if not provided.
-                    date:
-                      type: string
-                      format: date-time
-                      description: Event date and time
-                    price:
-                      type: number
-                      format: double
-                      description: Event ticket price  
-                    status:
-                      type: string
-                      enum: [PUBLISHED]
-                      description: Event status
-                    instant:
-                      type: string
-                      format: date-time
-                      description: Event creation timestamp
-                    id_creator:
-                      type: string
-                      description: ID of the event creator
-                    id_collaborators:
-                      type: array
-                      items:
-                        type: string
-                      description: IDs of the collaborators (if any)
-                      nullable: true
+                          enum: [PUBLISHED]
+                          description: Event status
+                        instant:
+                          type: string
+                          format: date-time
+                          description: Event creation timestamp
+                        id_creator:
+                          type: string
+                          description: ID of the event creator
+                        id_collaborators:
+                          type: array
+                          items:
+                            type: string
+                          description: IDs of the collaborators (if any)
+                          nullable: true
+              example:
+                events:
+                  - _id: "evt123"
+                    title: "Summer Concert"
+                    description: "Amazing outdoor concert"
+                    status: "PUBLISHED"
+                    date: "2025-07-15T20:00:00"
+                    location:
+                      name: "Arena"
+                      city: "Bologna"
+                      address: "Via Arena 1"
+                    tags: ["MUSIC"]
+                    posterUrl: "http://media:9020/posters/evt123.jpg"
+                    id_creator: "user456"
+                    id_organization: "org789"
+                limit: null
+                offset: 0
+                hasMore: false        
         '404':
           description: Could not retrieve events
           content:
@@ -201,6 +222,186 @@ paths:
                     type: string
                     description: Error message
                     example: "Could not retrieve events: Database connection failed"    
+      tags:
+        - Event Query API
+
+  /search:
+    get:
+      summary: Search and filter events
+      description: Search events with various filters and pagination support
+      parameters:
+        - name: limit
+          in: query
+          description: Maximum number of events to return (max 20, default 10)
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 20
+            default: 10
+          example: 10
+        - name: offset
+          in: query
+          description: Number of events to skip for pagination
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+          example: 0
+        - name: status
+          in: query
+          description: Filter by event status
+          required: false
+          schema:
+            type: string
+            enum: [DRAFT, PUBLISHED, CANCELLED, COMPLETED]
+          example: PUBLISHED
+        - name: title
+          in: query
+          description: Filter by event title (case-insensitive partial match)
+          required: false
+          schema:
+            type: string
+          example: concert
+        - name: tags
+          in: query
+          description: Filter by tags (can be repeated for multiple tags)
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+          style: form
+          explode: true
+          examples:
+            single:
+              summary: Single tag
+              value: MUSIC
+            multiple:
+              summary: Multiple tags
+              value: [MUSIC, SPORT]
+        - name: startDate
+          in: query
+          description: Filter events starting from this date (ISO 8601 format)
+          required: false
+          schema:
+            type: string
+            format: date-time
+          example: "2025-01-01T00:00:00"
+        - name: endDate
+          in: query
+          description: Filter events up to this date (ISO 8601 format)
+          required: false
+          schema:
+            type: string
+            format: date-time
+          example: "2025-12-31T23:59:59"
+        - name: id_organization
+          in: query
+          description: Filter by organization ID
+          required: false
+          schema:
+            type: string
+          example: org789
+        - name: city
+          in: query
+          description: Filter by city name (case-insensitive partial match)
+          required: false
+          schema:
+            type: string
+          example: Bologna
+        - name: location_name
+          in: query
+          description: Filter by location name (case-insensitive partial match)
+          required: false
+          schema:
+            type: string
+          example: Arena
+      responses:
+        '200':
+          description: Successfully retrieved filtered events
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  events:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Event'
+                  limit:
+                    type: integer
+                    description: Applied limit for this query
+                    nullable: true
+                  offset:
+                    type: integer
+                    description: Applied offset for this query
+                  hasMore:
+                    type: boolean
+                    description: Indicates if more events are available beyond the current result set
+              examples:
+                with_results:
+                  summary: Successful search with results
+                  value:
+                    events:
+                      - _id: "evt123"
+                        title: "Summer Concert"
+                        status: "PUBLISHED"
+                        date: "2025-07-15T20:00:00"
+                        location:
+                          name: "Arena"
+                          city: "Bologna"
+                        tags: ["MUSIC"]
+                    limit: 10
+                    offset: 0
+                    hasMore: true
+                no_results:
+                  summary: No events found
+                  value:
+                    events: []
+                    limit: 10
+                    offset: 0
+                    hasMore: false
+                paginated:
+                  summary: Second page of results
+                  value:
+                    events:
+                      - _id: "evt456"
+                        title: "Art Exhibition"
+                        status: "PUBLISHED"
+                    limit: 10
+                    offset: 10
+                    hasMore: false
+        '400':
+          description: Invalid request parameters or validation error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+              examples:
+                validation_error:
+                  summary: Validation error
+                  value:
+                    error: "Could not retrieve events: Limit must be positive"
+                invalid_status:
+                  summary: Invalid status value
+                  value:
+                    error: "Could not retrieve events: Invalid status value"
+        '404':
+          description: Error retrieving events
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+              example:
+                error: "Error"
       tags:
         - Event Query API
   
