--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -8,8 +8,11 @@
   },
   "scripts": {
     "dev": "vite",
-    "dev:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 vite",
-    "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 vite",
+    "dev-prod": "VITE_USE_MOCK_API=false VITE_HOST=localhost vite",
+    "dev:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 npm run dev",
+    "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 npm run dev",
+    "dev-prod:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 npm run dev-prod",
+    "dev-prod:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 npm run dev-prod",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
