chore(create-draft): validate creation event with optional field if is event draft

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -5,6 +5,11 @@ coverage:
         target: 70%
         threshold: null
         base: auto
+    patch:
+      default:
+        target: 50%
+        threshold: null
+        base: auto
 
 comment:
   layout: "reach, diff, flags, files, footer"
