fix(deploy-ci): wait for application to go up before restart traefik

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -247,5 +247,5 @@ jobs:
 
             # deploy
             ./scripts/composeApplication.sh pull
-            ./scripts/composeApplication.sh up -d --remove-orphans
+            ./scripts/composeApplication.sh up -d --remove-orphans --wait
             docker restart eventonight-traefik-1
