chore(frontend): integrate events api

--- a/services/frontend/docker-compose-dev.yaml
+++ b/services/frontend/docker-compose-dev.yaml
@@ -3,5 +3,7 @@ services:
     build:
       context: .
       dockerfile: ./services/frontend/Dockerfile
+      args:
+        HOST: ${HOST}
     ports:
       - "${FRONTEND_SERVICE_PORT}:${FRONTEND_SERVICE_PORT}"
