chore(protocol): introduce use HTTPS variable to determine request protocol

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -8,6 +8,8 @@ COPY ./services/frontend .
 ENV NODE_ENV=production
 ARG HOST="eventonight.site"
 ENV VITE_HOST=${HOST}
+ARG USE_HTTPS=true
+ENV VITE_USE_HTTPS=${USE_HTTPS}
 ENV VITE_USE_MOCK_API=false
 
 RUN npm run build
